// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`provider resolution > follows local helpers that build the URL 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/okapi-hq/api-grep/main/schema/report.v1.json",
  "calls": [
    {
      "authScheme": "none",
      "body": {
        "properties": {
          "chat_id": {
            "hint": "chatId",
            "type": "number",
          },
          "text": {
            "hint": "text",
            "type": "string",
          },
        },
        "required": [
          "chat_id",
          "text",
        ],
        "type": "object",
      },
      "bodyEncoding": "json",
      "client": "fetch",
      "confidence": 0.6,
      "dynamic": [
        {
          "name": "BOT_TOKEN",
          "origin": "env",
          "shape": {
            "type": "string",
          },
          "where": "path",
        },
        {
          "name": "chat_id",
          "origin": "param",
          "where": "body",
        },
        {
          "name": "text",
          "origin": "param",
          "where": "body",
        },
      ],
      "examples": [
        {
          "body": {
            "chat_id": 8490,
            "text": "Orbit jetty beacon yarrow meadow umber.",
          },
          "bodyEncoding": "json",
          "headers": {
            "content-type": "application/json",
          },
          "method": "POST",
          "query": {},
          "url": "https://api.telegram.org/bot%3CBOT_TOKEN%3E/sendMessage",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "host": "api.telegram.org",
      "hostKind": "literal",
      "id": "566300527cd7",
      "location": {
        "col": 10,
        "file": "telegram.ts",
        "language": "typescript",
        "line": 6,
      },
      "method": "POST",
      "pathTemplate": "/bot{BOT_TOKEN}/sendMessage",
      "provider": "telegram",
      "providerSource": "host",
      "query": [],
      "scheme": "https",
      "urlTemplate": "https://api.telegram.org/bot{env:BOT_TOKEN}/sendMessage",
    },
    {
      "authScheme": "none",
      "bodyEncoding": "none",
      "client": "fetch",
      "confidence": 0.4,
      "dynamic": [],
      "examples": [
        {
          "bodyEncoding": "none",
          "headers": {},
          "method": "GET",
          "query": {},
          "url": "https://api.invoices.example.com/v2/invoices",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "host": "api.invoices.example.com",
      "hostKind": "literal",
      "id": "01bf470a90ad",
      "location": {
        "col": 35,
        "file": "telegram.ts",
        "language": "typescript",
        "line": 13,
      },
      "method": "GET",
      "pathTemplate": "/v2/invoices",
      "provider": "api.invoices.example.com",
      "query": [],
      "scheme": "https",
      "urlTemplate": "https://api.invoices.example.com/v2/invoices",
    },
  ],
  "coverage": {
    "sdks": [],
  },
  "diagnostics": {
    "complete": true,
    "droppedCalls": [],
    "filesScanned": 1,
    "filesSeen": 1,
    "languages": {
      "typescript": {
        "filesScanned": 1,
        "filesSeen": 1,
      },
    },
    "skipped": [],
    "skippedCounts": {},
    "unfollowed": [],
  },
  "schemaVersion": "1.3.0",
  "stats": {
    "byClient": {
      "fetch": 2,
    },
    "byHostKind": {
      "literal": 2,
    },
    "byLanguage": {
      "typescript": 2,
    },
    "byProvider": {
      "api.invoices.example.com": 1,
      "telegram": 1,
    },
    "callsFound": 2,
    "durationMs": 0,
    "filesScanned": 1,
    "redacted": 0,
    "withBodyShape": 1,
    "withDynamic": 1,
    "withFindings": 0,
  },
  "tool": "api-grep",
  "version": "<version>",
}
`;

exports[`provider resolution > never names a provider after a host template 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/okapi-hq/api-grep/main/schema/report.v1.json",
  "calls": [
    {
      "authScheme": "none",
      "bodyEncoding": "none",
      "client": "fetch",
      "confidence": 0.1,
      "dynamic": [
        {
          "name": "hostname",
          "origin": "param",
          "shape": {
            "type": "string",
          },
          "where": "host",
        },
      ],
      "examples": [
        {
          "bodyEncoding": "none",
          "headers": {},
          "method": "GET",
          "query": {},
          "url": "https://{hostname}:443/status",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "host": "{hostname}:443",
      "hostKind": "unknown",
      "id": "20e17cab9673",
      "location": {
        "col": 42,
        "file": "hosts.ts",
        "language": "typescript",
        "line": 1,
      },
      "method": "GET",
      "pathTemplate": "/status",
      "provider": "unknown",
      "query": [],
      "scheme": "https",
      "urlTemplate": "https://{hostname}:443/status",
    },
    {
      "authScheme": "none",
      "bodyEncoding": "none",
      "client": "fetch",
      "confidence": 0.25,
      "dynamic": [],
      "envName": "PORT",
      "examples": [
        {
          "bodyEncoding": "none",
          "headers": {},
          "method": "GET",
          "query": {},
          "url": "http://127.0.0.1:{env:PORT}/health",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "host": "127.0.0.1:{env:PORT}",
      "hostKind": "env",
      "id": "e44481c0df40",
      "location": {
        "col": 28,
        "file": "hosts.ts",
        "language": "typescript",
        "line": 2,
      },
      "method": "GET",
      "pathTemplate": "/health",
      "provider": "internal",
      "query": [],
      "scheme": "http",
      "urlTemplate": "http://127.0.0.1:{env:PORT}/health",
    },
    {
      "authScheme": "none",
      "bodyEncoding": "none",
      "client": "fetch",
      "confidence": 0.4,
      "dynamic": [
        {
          "name": "port",
          "origin": "param",
          "shape": {
            "type": "number",
          },
          "where": "host",
        },
      ],
      "examples": [
        {
          "bodyEncoding": "none",
          "headers": {},
          "method": "GET",
          "query": {},
          "url": "http://localhost:{port}/api/items",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "host": "localhost:{port}",
      "hostKind": "literal",
      "id": "993f1205b74b",
      "location": {
        "col": 38,
        "file": "hosts.ts",
        "language": "typescript",
        "line": 3,
      },
      "method": "GET",
      "pathTemplate": "/api/items",
      "provider": "internal",
      "query": [],
      "scheme": "http",
      "urlTemplate": "http://localhost:{port}/api/items",
    },
    {
      "authScheme": "none",
      "bodyEncoding": "none",
      "client": "fetch",
      "confidence": 0.25,
      "dynamic": [],
      "envName": "REPLIT_CONNECTORS_HOSTNAME",
      "examples": [
        {
          "bodyEncoding": "none",
          "headers": {},
          "method": "GET",
          "query": {},
          "url": "https://{env:REPLIT_CONNECTORS_HOSTNAME}/api/v2/connection",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "host": "{env:REPLIT_CONNECTORS_HOSTNAME}",
      "hostKind": "env",
      "id": "b6f8116867d6",
      "location": {
        "col": 32,
        "file": "hosts.ts",
        "language": "typescript",
        "line": 4,
      },
      "method": "GET",
      "pathTemplate": "/api/v2/connection",
      "provider": "env:REPLIT_CONNECTORS_HOSTNAME",
      "query": [],
      "scheme": "https",
      "urlTemplate": "https://{env:REPLIT_CONNECTORS_HOSTNAME}/api/v2/connection",
    },
    {
      "authScheme": "none",
      "bodyEncoding": "none",
      "client": "fetch",
      "confidence": 0.1,
      "dynamic": [
        {
          "name": "region",
          "origin": "param",
          "shape": {
            "type": "string",
          },
          "where": "host",
        },
      ],
      "examples": [
        {
          "bodyEncoding": "none",
          "headers": {},
          "method": "GET",
          "query": {},
          "url": "https://calendar.zoho.{region}/api/v1/events",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "host": "calendar.zoho.{region}",
      "hostKind": "unknown",
      "id": "326254d64ff1",
      "location": {
        "col": 45,
        "file": "hosts.ts",
        "language": "typescript",
        "line": 5,
      },
      "method": "GET",
      "pathTemplate": "/api/v1/events",
      "provider": "unknown",
      "query": [],
      "scheme": "https",
      "urlTemplate": "https://calendar.zoho.{region}/api/v1/events",
    },
  ],
  "coverage": {
    "sdks": [],
  },
  "diagnostics": {
    "complete": true,
    "droppedCalls": [],
    "filesScanned": 1,
    "filesSeen": 1,
    "languages": {
      "typescript": {
        "filesScanned": 1,
        "filesSeen": 1,
      },
    },
    "skipped": [],
    "skippedCounts": {},
    "unfollowed": [],
  },
  "schemaVersion": "1.3.0",
  "stats": {
    "byClient": {
      "fetch": 5,
    },
    "byHostKind": {
      "env": 2,
      "literal": 1,
      "unknown": 2,
    },
    "byLanguage": {
      "typescript": 5,
    },
    "byProvider": {
      "env:REPLIT_CONNECTORS_HOSTNAME": 1,
      "internal": 2,
      "unknown": 2,
    },
    "callsFound": 5,
    "durationMs": 0,
    "filesScanned": 1,
    "redacted": 0,
    "withBodyShape": 0,
    "withDynamic": 3,
    "withFindings": 0,
  },
  "tool": "api-grep",
  "version": "<version>",
}
`;

exports[`provider resolution > reads class base URLs from the constructor and parameter defaults 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/okapi-hq/api-grep/main/schema/report.v1.json",
  "calls": [
    {
      "authScheme": "none",
      "body": {
        "hint": "Blob",
        "origin": "unknown",
        "type": "dynamic",
      },
      "bodyEncoding": "json",
      "client": "fetch",
      "confidence": 0.2,
      "dynamic": [
        {
          "name": "body",
          "origin": "unknown",
          "where": "body",
        },
      ],
      "examples": [
        {
          "body": {},
          "bodyEncoding": "json",
          "headers": {
            "content-type": "application/json",
          },
          "method": "POST",
          "query": {},
          "url": "https://api.gladia.io/v2/upload",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "host": "api.gladia.io",
      "hostKind": "const",
      "id": "7a0b0a935b8b",
      "location": {
        "col": 12,
        "file": "gladia.ts",
        "language": "typescript",
        "line": 9,
      },
      "method": "POST",
      "pathTemplate": "/v2/upload",
      "provider": "gladia",
      "providerSource": "host",
      "query": [],
      "scheme": "https",
      "urlTemplate": "https://api.gladia.io/v2/upload",
    },
    {
      "authScheme": "none",
      "body": {
        "properties": {
          "text": {
            "hint": "text",
            "type": "string",
          },
        },
        "required": [
          "text",
        ],
        "type": "object",
      },
      "bodyEncoding": "json",
      "client": "fetch",
      "confidence": 0.6,
      "dynamic": [
        {
          "name": "voiceId",
          "origin": "param",
          "shape": {
            "type": "string",
          },
          "where": "path",
        },
        {
          "name": "text",
          "origin": "param",
          "where": "body",
        },
      ],
      "examples": [
        {
          "body": {
            "text": "Inlet river estuary willow grove fjord.",
          },
          "bodyEncoding": "json",
          "headers": {
            "content-type": "application/json",
          },
          "method": "POST",
          "query": {},
          "url": "https://api.elevenlabs.io/v1/text-to-speech/2iufsbfw",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "host": "api.elevenlabs.io",
      "hostKind": "const",
      "id": "11d410797e12",
      "location": {
        "col": 12,
        "file": "gladia.ts",
        "language": "typescript",
        "line": 17,
      },
      "method": "POST",
      "pathTemplate": "/v1/text-to-speech/{voiceId}",
      "provider": "elevenlabs",
      "providerSource": "host",
      "query": [],
      "scheme": "https",
      "urlTemplate": "https://api.elevenlabs.io/v1/text-to-speech/{voiceId}",
    },
    {
      "authScheme": "none",
      "bodyEncoding": "none",
      "client": "fetch",
      "confidence": 0.4,
      "dynamic": [],
      "examples": [
        {
          "bodyEncoding": "none",
          "headers": {},
          "method": "GET",
          "query": {},
          "url": "https://api.elevenlabs.io/v1/voices",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "host": "api.elevenlabs.io",
      "hostKind": "const",
      "id": "fad326f3bf89",
      "location": {
        "col": 10,
        "file": "gladia.ts",
        "language": "typescript",
        "line": 22,
      },
      "method": "GET",
      "pathTemplate": "/v1/voices",
      "provider": "elevenlabs",
      "providerSource": "host",
      "query": [],
      "scheme": "https",
      "urlTemplate": "https://api.elevenlabs.io/v1/voices",
    },
  ],
  "coverage": {
    "sdks": [],
  },
  "diagnostics": {
    "complete": true,
    "droppedCalls": [],
    "filesScanned": 1,
    "filesSeen": 1,
    "languages": {
      "typescript": {
        "filesScanned": 1,
        "filesSeen": 1,
      },
    },
    "skipped": [],
    "skippedCounts": {},
    "unfollowed": [],
  },
  "schemaVersion": "1.3.0",
  "stats": {
    "byClient": {
      "fetch": 3,
    },
    "byHostKind": {
      "const": 3,
    },
    "byLanguage": {
      "typescript": 3,
    },
    "byProvider": {
      "elevenlabs": 2,
      "gladia": 1,
    },
    "callsFound": 3,
    "durationMs": 0,
    "filesScanned": 1,
    "redacted": 0,
    "withBodyShape": 1,
    "withDynamic": 2,
    "withFindings": 0,
  },
  "tool": "api-grep",
  "version": "<version>",
}
`;

exports[`provider resolution > takes the provider from an env var's literal default and keeps the env var 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/okapi-hq/api-grep/main/schema/report.v1.json",
  "calls": [
    {
      "authScheme": "none",
      "body": {
        "properties": {
          "messages": {
            "items": {
              "properties": {
                "content": {
                  "hint": "prompt",
                  "type": "string",
                },
                "role": {
                  "enum": [
                    "user",
                  ],
                  "type": "string",
                },
              },
              "required": [
                "role",
                "content",
              ],
              "type": "object",
            },
            "type": "array",
          },
          "model": {
            "enum": [
              "gpt-4o",
            ],
            "type": "string",
          },
        },
        "required": [
          "model",
          "messages",
        ],
        "type": "object",
      },
      "bodyEncoding": "json",
      "client": "fetch",
      "confidence": 0.45,
      "dynamic": [],
      "envName": "LANGDOCK_BASE_URL",
      "examples": [
        {
          "body": {
            "messages": [
              {
                "content": "Lantern zenith yarrow willow falcon lagoon.",
                "role": "user",
              },
            ],
            "model": "gpt-4o",
          },
          "bodyEncoding": "json",
          "headers": {
            "content-type": "application/json",
          },
          "method": "POST",
          "query": {},
          "url": "https://api.langdock.com/openai/eu/v1/chat/completions",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "host": "api.langdock.com",
      "hostKind": "env",
      "id": "bcf5c8c35ed3",
      "location": {
        "col": 10,
        "file": "llm.ts",
        "language": "typescript",
        "line": 4,
      },
      "method": "POST",
      "pathTemplate": "/openai/eu/v1/chat/completions",
      "provider": "langdock",
      "providerSource": "host",
      "query": [],
      "scheme": "https",
      "urlTemplate": "{env:LANGDOCK_BASE_URL}/chat/completions",
    },
    {
      "authScheme": "none",
      "bodyEncoding": "none",
      "client": "fetch",
      "confidence": 0.25,
      "dynamic": [],
      "envName": "TTS_URL",
      "examples": [
        {
          "bodyEncoding": "none",
          "headers": {},
          "method": "GET",
          "query": {},
          "url": "https://api.elevenlabs.io/v1/voices",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "host": "api.elevenlabs.io",
      "hostKind": "env",
      "id": "1680ddf306ad",
      "location": {
        "col": 29,
        "file": "llm.ts",
        "language": "typescript",
        "line": 7,
      },
      "method": "GET",
      "pathTemplate": "/v1/voices",
      "provider": "elevenlabs",
      "providerSource": "host",
      "query": [],
      "scheme": "https",
      "urlTemplate": "{env:TTS_URL}/v1/voices",
    },
  ],
  "coverage": {
    "sdks": [],
  },
  "diagnostics": {
    "complete": true,
    "droppedCalls": [],
    "filesScanned": 1,
    "filesSeen": 1,
    "languages": {
      "typescript": {
        "filesScanned": 1,
        "filesSeen": 1,
      },
    },
    "skipped": [],
    "skippedCounts": {},
    "unfollowed": [],
  },
  "schemaVersion": "1.3.0",
  "stats": {
    "byClient": {
      "fetch": 2,
    },
    "byHostKind": {
      "env": 2,
    },
    "byLanguage": {
      "typescript": 2,
    },
    "byProvider": {
      "elevenlabs": 1,
      "langdock": 1,
    },
    "callsFound": 2,
    "durationMs": 0,
    "filesScanned": 1,
    "redacted": 0,
    "withBodyShape": 1,
    "withDynamic": 0,
    "withFindings": 0,
  },
  "tool": "api-grep",
  "version": "<version>",
}
`;

exports[`provider resolution > takes the provider from the env var's name, with lower confidence 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/okapi-hq/api-grep/main/schema/report.v1.json",
  "calls": [
    {
      "authScheme": "none",
      "bodyEncoding": "none",
      "client": "fetch",
      "confidence": 0.15,
      "dynamic": [],
      "envName": "OPENROUTER_BASE_URL",
      "examples": [
        {
          "bodyEncoding": "none",
          "headers": {},
          "method": "GET",
          "query": {},
          "url": "https://{env:OPENROUTER_BASE_URL}/models",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "hostKind": "env",
      "id": "b564e9ae08af",
      "location": {
        "col": 29,
        "file": "clients.ts",
        "language": "typescript",
        "line": 1,
      },
      "method": "GET",
      "pathTemplate": "/models",
      "provider": "openrouter",
      "providerSource": "env-name",
      "query": [],
      "urlTemplate": "{env:OPENROUTER_BASE_URL}/models",
    },
    {
      "authScheme": "none",
      "bodyEncoding": "none",
      "client": "fetch",
      "confidence": 0.15,
      "dynamic": [
        {
          "name": "name",
          "origin": "param",
          "shape": {
            "type": "string",
          },
          "where": "path",
        },
      ],
      "envName": "NEXT_PUBLIC_SUPABASE_URL",
      "examples": [
        {
          "bodyEncoding": "none",
          "headers": {},
          "method": "POST",
          "query": {},
          "url": "https://{env:NEXT_PUBLIC_SUPABASE_URL}/functions/v1/fjord",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "hostKind": "env",
      "id": "732a96343c0c",
      "location": {
        "col": 41,
        "file": "clients.ts",
        "language": "typescript",
        "line": 3,
      },
      "method": "POST",
      "pathTemplate": "/functions/v1/{name}",
      "provider": "supabase",
      "providerSource": "env-name",
      "query": [],
      "urlTemplate": "{env:NEXT_PUBLIC_SUPABASE_URL}/functions/v1/{name}",
    },
    {
      "authScheme": "none",
      "body": {
        "properties": {
          "text": {
            "hint": "text",
            "type": "string",
          },
        },
        "required": [
          "text",
        ],
        "type": "object",
      },
      "bodyEncoding": "json",
      "client": "fetch",
      "confidence": 0.35,
      "dynamic": [
        {
          "name": "text",
          "origin": "param",
          "where": "body",
        },
      ],
      "envName": "SLACK_WEBHOOK_URL",
      "examples": [
        {
          "body": {
            "text": "Wander atlas birch walnut birch timber.",
          },
          "bodyEncoding": "json",
          "headers": {
            "content-type": "application/json",
          },
          "method": "POST",
          "query": {},
          "url": "https://{env:SLACK_WEBHOOK_URL}/",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "hostKind": "env",
      "id": "1617ac303fa0",
      "location": {
        "col": 40,
        "file": "clients.ts",
        "language": "typescript",
        "line": 5,
      },
      "method": "POST",
      "pathTemplate": "/",
      "provider": "slack",
      "providerSource": "env-name",
      "query": [],
      "urlTemplate": "{env:SLACK_WEBHOOK_URL}",
    },
    {
      "authScheme": "none",
      "bodyEncoding": "none",
      "client": "fetch",
      "confidence": 0.15,
      "dynamic": [],
      "envName": "VITE_API_URL",
      "examples": [
        {
          "bodyEncoding": "none",
          "headers": {},
          "method": "GET",
          "query": {},
          "url": "https://{env:VITE_API_URL}/me",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "hostKind": "env",
      "id": "836d866c1994",
      "location": {
        "col": 25,
        "file": "clients.ts",
        "language": "typescript",
        "line": 8,
      },
      "method": "GET",
      "pathTemplate": "/me",
      "provider": "env:VITE_API_URL",
      "query": [],
      "urlTemplate": "{env:VITE_API_URL}/me",
    },
    {
      "authScheme": "none",
      "bodyEncoding": "none",
      "client": "fetch",
      "confidence": 0.15,
      "dynamic": [],
      "envName": "GITHUB_CALLBACK_URL",
      "examples": [
        {
          "bodyEncoding": "none",
          "headers": {},
          "method": "GET",
          "query": {
            "ping": "1",
          },
          "url": "https://{env:GITHUB_CALLBACK_URL}/?ping=1",
          "variant": "minimal",
        },
      ],
      "findings": [],
      "headerValues": {},
      "headers": [],
      "hostKind": "env",
      "id": "58caf59881d8",
      "location": {
        "col": 31,
        "file": "clients.ts",
        "language": "typescript",
        "line": 9,
      },
      "method": "GET",
      "pathTemplate": "/",
      "provider": "env:GITHUB_CALLBACK_URL",
      "query": [
        "ping",
      ],
      "queryShape": {
        "properties": {
          "ping": {
            "enum": [
              "1",
            ],
            "type": "string",
          },
        },
        "required": [
          "ping",
        ],
        "type": "object",
      },
      "urlTemplate": "{env:GITHUB_CALLBACK_URL}?ping=1",
    },
  ],
  "coverage": {
    "sdks": [],
  },
  "diagnostics": {
    "complete": true,
    "droppedCalls": [],
    "filesScanned": 1,
    "filesSeen": 1,
    "languages": {
      "typescript": {
        "filesScanned": 1,
        "filesSeen": 1,
      },
    },
    "skipped": [],
    "skippedCounts": {},
    "unfollowed": [],
  },
  "schemaVersion": "1.3.0",
  "stats": {
    "byClient": {
      "fetch": 5,
    },
    "byHostKind": {
      "env": 5,
    },
    "byLanguage": {
      "typescript": 5,
    },
    "byProvider": {
      "env:GITHUB_CALLBACK_URL": 1,
      "env:VITE_API_URL": 1,
      "openrouter": 1,
      "slack": 1,
      "supabase": 1,
    },
    "callsFound": 5,
    "durationMs": 0,
    "filesScanned": 1,
    "redacted": 0,
    "withBodyShape": 1,
    "withDynamic": 2,
    "withFindings": 0,
  },
  "tool": "api-grep",
  "version": "<version>",
}
`;
